--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,15 @@ body, html {
     padding: 0;
     overflow-x: hidden;
     background-color: theme('colors.light');
+    scroll-behavior: smooth;
+}
+
+.section {
+  padding: 20px;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .clip-rectangle {
@@ -26,12 +35,12 @@ body, html {
 
 #first_text {
     @apply header_text;
-    animation: slideInLeft 1.5s forwards, shake 1s infinite 1.5s;
+    animation: slideInLeft 1.5s forwards 0.5s, shake 1s infinite 2s;
 }
 
 #second_text {
     @apply header_text;
-    animation: slideInRight 1.5s forwards, shake 1s infinite 1.5s;
+    animation: slideInRight 1.5s forwards 0.5s, shake 1s infinite 2s;
 }
 
 @keyframes shake {
@@ -40,12 +49,14 @@ body, html {
   }
   25% {
     transform: translateX(-10px);
+    transform: rotate(-2deg);
   }
   50% {
     transform: translateX(10px);
   }
   75% {
     transform: translateX(-10px);
+    transform: rotate(2deg);
   }
   100% {
     transform: translateX(0);
@@ -75,3 +86,55 @@ body, html {
       opacity: 1;
     }
   }
+
+.profile {
+    opacity: 0;
+}
+
+.profile.visible {
+    opacity: 1;
+    animation: appear 1.5s forwards;
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.exp_date {
+  animation: exp_scroll liner;
+  animation-timeline: view();
+  animation-range: entry 0% cover;
+}
+.exp_text {
+  animation: exp_scroll liner;
+  animation-timeline: view();
+  animation-range: entry 0% cover;
+}
+
+@keyframes exp_scroll {
+  0% {
+    opacity: 0.6;
+    transform: translateX(-100px);
+  }
+  25% {
+    opacity: 0.8;
+    transform: translateX(0px);
+  }
+  50% {
+    opacity: 1;
+    transform: translateX(100px);
+  }
+  75% {
+    opacity: 0.8;
+    transform: translateX(0px);
+  }
+  100% {
+    opacity: 0.6;
+    transform: translateX(-100px);
+  }
+}
