--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,15 +105,8 @@ body, html {
     }
 }
 
-.exp_date {
-  animation: exp_scroll liner;
-  animation-timeline: view();
-  animation-range: entry 0% cover;
-}
-.exp_text {
-  animation: exp_scroll liner;
-  animation-timeline: view();
-  animation-range: entry 0% cover;
+.exp_animate {
+  animation: exp_scroll 5s forwards;
 }
 
 @keyframes exp_scroll {
@@ -121,20 +114,12 @@ body, html {
     opacity: 0.6;
     transform: translateX(-100px);
   }
-  25% {
-    opacity: 0.8;
-    transform: translateX(0px);
-  }
   50% {
-    opacity: 1;
-    transform: translateX(100px);
-  }
-  75% {
     opacity: 0.8;
     transform: translateX(0px);
   }
   100% {
-    opacity: 0.6;
-    transform: translateX(-100px);
+    opacity: 1;
+    transform: translateX(100px);
   }
 }
